# z00z

./: .gitattributes  .gitignore  AGENTS.md  Cargo-features.md  Cargo.toml  LICENSE  NOTICE  README.md  deep-wiki-readme.md  deny.toml  pack_z00z_project.sh  playwright.config.js  unpack_z00z_project.sh  versions.yaml  z00z_penetration_tests.sh
crates/z00z_core/: Cargo.toml
crates/z00z_core/src/: domains.rs  lib.rs
crates/z00z_core/src/assets/: gas.rs  test_asset.rs  test_definition.rs
crates/z00z_core/src/genesis/: chain_identity.rs  genesis.rs  genesis_output_support.rs  genesis_settlement_manifest.rs  mod.rs
crates/z00z_core/tests/: generated_kani_asset_pkg_json.rs  test_live_guardrails.rs
crates/z00z_crypto/: Cargo.toml
crates/z00z_crypto/src/: domains.rs  hidden.rs  lib.rs
crates/z00z_crypto/src/hash/: domains.rs  mod.rs  policy.rs  sha256_hash.rs  test_hash.rs
crates/z00z_crypto/tests/: test_hash_policy.rs
crates/z00z_rollup_node/: Cargo.toml
crates/z00z_rollup_node/src/: celestia_local.rs  config.rs  da.rs  lib.rs  main.rs  process_devnet.rs  rpc.rs  runtime.rs  status.rs
crates/z00z_rollup_node/tests/: test_celestia_local_binding.rs  test_da_local_quorum_binding.rs  test_da_local_sim.rs  test_hjmt_node_lifecycle.rs  test_hjmt_process.rs  test_hjmt_process_devnet.rs  test_hjmt_topology.rs  test_rollup_theorem_guard.rs
crates/z00z_rollup_node/tests/support/: test_hjmt_home.rs  test_theorem_fixture.rs
crates/z00z_runtime/aggregators/: Cargo.toml  README.md
crates/z00z_runtime/aggregators/src/: batch_planner.rs  bft_committee.rs  bft_engine.rs  commit_subject.rs  consensus_store.rs  evidence.rs  lib.rs  recovery.rs  service.rs  shard_quorum_certificate.rs  shard_vote.rs  signature.rs  transport.rs  types.rs
crates/z00z_runtime/aggregators/tests/: test_bft_committee_rules.rs  test_consensus_recovery_restart.rs  test_consensus_store.rs  test_equivocation_evidence.rs  test_hjmt_dispatch.rs  test_hjmt_failover_same_lineage.rs  test_hjmt_join.rs  test_hjmt_publish.rs  test_live_guardrails.rs  test_local_quorum_certificate.rs  test_planner_authority.rs  test_publication_binding.rs  test_secondary_replay_verifier.rs  test_signature_adapter.rs  test_structured_evidence_registry.rs  test_transport_adapter.rs
crates/z00z_storage/: Cargo.toml
crates/z00z_storage/benches/: recursive_v2_checkpoint.rs  settlement_benches.md
crates/z00z_storage/scripts/: run_storage_settlement_bench.py
crates/z00z_storage/src/: error.rs
crates/z00z_storage/src/checkpoint/: adapter.rs  archive_manifest.rs  artifact_final.rs  artifact_proof_draft.rs  artifact_stmt.rs  authority_artifacts.rs  build.rs  canonical_transition.rs  checkpoint_contract.yaml  checkpoint_contract_v2_migration.yaml  codec.rs  contract_config.rs  contract_config_v3.rs  da_reference.rs  exec_input.rs  ids.rs  lifecycle.rs  link.rs  mod.rs  nova.rs  plonky3.rs  pq_anchor.rs  publication_evidence.rs  receipt.rs  recursive_chain.rs  recursive_checkpoint.rs  recursive_circuit.rs  recursive_context.rs  recursive_encoding.rs  recursive_measurement.rs  recursive_predicate.rs  recursive_recovery.rs  recursive_reject.rs  recursive_semantics.rs  recursive_source_manifest_v2.txt  recursive_statement.rs  recursive_trace.rs  recursive_v2.rs  sidecar.rs  store.rs  (+3 more)
crates/z00z_storage/src/fixture_support/: checkpoint_fixtures.rs  genesis_chain_identity.rs  mod.rs  snapshot_fix.rs
crates/z00z_storage/src/settlement/: README.md  hjmt_commit.rs  hjmt_store.rs  identity.rs  keys.rs  mod.rs  proof.rs  proof_batch.rs  record.rs  store.rs
crates/z00z_storage/src/snapshot/: mod.rs  store.rs  test_snapshot.rs  types.rs
crates/z00z_storage/tests/: test_batch_proof_support.rs  test_checkpoint_archive_contract.rs  test_checkpoint_codec.rs  test_checkpoint_contract_config.rs  test_checkpoint_draft_build.rs  test_checkpoint_draft_final.rs  test_checkpoint_finalization.rs  test_checkpoint_ids.rs  test_checkpoint_link_injective.rs  test_checkpoint_replay_inputs.rs  test_checkpoint_replay_substrate.rs  test_checkpoint_stage_gates.rs  test_checkpoint_statement_vectors.rs  test_checkpoint_store.rs  test_checkpoint_store_policy.rs  test_fee_replay.rs  test_live_guardrails.rs  test_nova_chain.rs  test_pq_anchor.rs  test_recursive_checkpoint.rs  test_recursive_circuit.rs  test_recursive_predicate_properties.proptest-regressions  test_recursive_v2_compile_fail.rs  test_recursive_v2_cutover.rs  test_recursive_v2_nova_adversarial.rs  test_recursive_v2_nova_codec.rs  test_recursive_v2_nova_step.rs  test_recursive_v2_plonky3_base.rs  test_recursive_v2_receipt.rs  test_recursive_v2_trace.rs  test_snapshot_persist.rs
crates/z00z_storage/tests/fixtures/: recursive_source_revision_v2.hex  test_recursive_v2_private_stages.rs
crates/z00z_storage/tests/ui/: recursive_v2_private_stages.rs
crates/z00z_utils/: Cargo.toml
crates/z00z_utils/src/codec/: bincode.rs  yaml.rs
crates/z00z_utils/src/config/: traits.rs
crates/z00z_utils/src/io/: atomic_write.rs  error.rs  file_read.rs  fs.rs  fs_codec.rs  mod.rs  secure.rs  spool.rs  test_fs_io_suite.rs
crates/z00z_utils/tests/: test_os_hardening_integration.rs
crates/z00z_wallets/: Cargo.toml  README.md
crates/z00z_wallets/docs/: KEYS-Bip44-UserGuide.md  KEYS-DERIVATION.md  KEYS-EXPLANATION.md  KEYS-GUIDE.md  WALLET-GUIDE.md  WLT-BREAKDOWN.md  Z00Z-WALLET-PERSISTENCE.md  bip44_derivation.md
crates/z00z_wallets/src/: lib.rs
crates/z00z_wallets/src/app/: app_kernel.rs  mod.rs
crates/z00z_wallets/src/db/: wallet_store.rs
crates/z00z_wallets/src/domains/: test_definitions.rs
crates/z00z_wallets/src/redb_store/: debug.rs  mutations_create_wallet.rs  test_store_suite.rs
crates/z00z_wallets/src/rpc/: asset_rpc_impl.rs  asset_rpc_server.rs  asset_rpc_server_catalog.rs  asset_rpc_support_claims.rs  asset_rpc_support_state.rs  chain_rpc_impl.rs  test_asset_impl.rs  (+3 more)
crates/z00z_wallets/tests/: test_live_boundary_claims.rs  test_rename_guards.rs  test_sensitive_rpc_session.rs  test_spec_terms_guard.rs  test_stub_behavior.rs  test_wallet_capability_matrix.rs  test_wallet_restore_atomic.rs
(+1822 files in other folders)
