
[package]
name = "z00z_rollup_node"
version = "0.2.0"
edition = "2021"
license = "MIT OR BSD-3-Clause"

[lib]
doctest = false

[dependencies]
z00z_crypto = { path = "../z00z_crypto" }
z00z_aggregators = { path = "../z00z_runtime/aggregators" }
z00z_validators = { path = "../z00z_runtime/validators" }
z00z_watchers = { path = "../z00z_runtime/watchers" }
z00z_storage = { path = "../z00z_storage" }
z00z_wallets = { path = "../z00z_wallets" }
z00z_utils = { path = "../z00z_utils" }
hex = "0.4"
sha2 = "0.10"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1"
thiserror = { workspace = true }

[dev-dependencies]
z00z_core = { path = "../z00z_core" }
tempfile = "3"

[features]
test-params-fast = [
  "z00z_core/test-params-fast",
  "z00z_crypto/test-params-fast",
  "z00z_storage/test-params-fast",
  "z00z_utils/test-params-fast",
  "z00z_wallets/test-params-fast",
  "z00z_wallets/wallet_debug_tools",
]
