
[package]
name = "z00z_storage"
version = "0.2.0"
edition = "2021"
license = "MIT OR BSD-3-Clause"

[lib]
doctest = false

[features]
test-params-fast = [
  "z00z_core/test-params-fast",
  "z00z_crypto/test-params-fast",
  "z00z_utils/test-params-fast",
]

[dependencies]
anyhow = { workspace = true }
bincode = { version = "2.0.1", features = ["serde"] }
ff = "0.13"
jmt = "0.12.0"
nova-snark = { workspace = true }
rayon = "1.10"
redb = "2"
serde = { workspace = true, features = ["derive"] }
sha2 = "0.10"
tempfile = "3"
thiserror = { workspace = true }
z00z_core = { path = "../z00z_core" }
z00z_crypto = { path = "../z00z_crypto" }
z00z_utils = { path = "../z00z_utils" }

[dev-dependencies]
criterion = "0.5"
proptest = "1.5"
serde_json = "1.0"
stats_alloc = "0.1"
z00z_core = { path = "../z00z_core", features = ["deterministic-rng"] }
z00z_wallets = { path = "../z00z_wallets", features = [
  "ownership_policy_keyring",
] }

[[bench]]
name = "adaptive_policy_bench"
harness = false

[[bench]]
name = "settlement_shard"
harness = false

[[bench]]
name = "settlement_nested"
harness = false

[[bench]]
name = "settlement_hjmt"
harness = false

[[bench]]
name = "settlement_proofs"
harness = false
