
[package]
name = "z00z_utils"
version = "0.1.0"
edition = "2021"
license = "MIT OR BSD-3-Clause"
description = "Generic utilities and cross-cutting concerns for Z00Z blockchain"

[lib]
doctest = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
erased-serde = "0.4"
serde_yaml = "0.9"
bincode = { version = "2.0.1", features = ["serde"] }
thiserror = "2.0"
tracing = "0.1"
rand = { version = "0.8", features = ["std", "std_rng"] }
rand_chacha = "0.3"
chrono = "0.4"
prometheus = { version = "0.14", optional = true }
zeroize = { version = "1.7", features = ["derive", "alloc"] }
sha2 = "0.10"
tempfile = "3.10"
libc = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
zstd = "0.13"
lz4 = "1"
lz4_flex = "0.11"
rustix = { version = "1", features = ["fs", "mm", "process"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Memory"] }

[features]
default = []
prometheus = ["dep:prometheus"]
deterministic-rng = []
test-utils = []
test-params-fast = []

[dev-dependencies]
