
[package]
name = "z00z_wallets"
version = "0.2.0"
edition = "2021"
license = "MIT OR BSD-3-Clause"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[[bench]]
name = "wallet_service_bench"
harness = false

[[bench]]
name = "derivation_bench"
harness = false

[[bench]]
name = "async_batch_threshold_bench"
harness = false

[[bench]]
name = "receiver_derivation"
harness = false

[[bench]]
name = "mac_timing"
harness = false

[[bench]]
name = "tx_perf_bench"
harness = false

[[bin]]
name = "gen_password_bloom"
path = "bin/gen_password_bloom.rs"

[[bin]]
name = "z00z-wallet-validate"
path = "bin/z00z-wallet-validate.rs"

[[test]]
name = "test_ecdh"
path = "tests/test_ecdh.rs"

[[test]]
name = "test_kdf"
path = "tests/test_kdf.rs"

[[test]]
name = "test_zkpack"
path = "tests/test_zkpack.rs"

[[test]]
name = "test_golden_vectors"
path = "tests/test_golden_vectors.rs"

[[test]]
name = "test_adversarial"
path = "tests/test_adversarial.rs"

[[test]]
name = "test_perf_wallets"
path = "tests/test_perf_wallets.rs"

# build z00z_wallets with --features os_hardening.
# z00z_utils now uses #![warn(unsafe_code)] instead of forbidding it, 
# because mlock/munlock require unsafe calls; these are contained in the single module: crates/z00z_utils/src/lib.rs

[dependencies]
# Z00Z Core Dependencies (READ-ONLY - MANDATORY: Use z00z_utils abstractions)
z00z_core = { path = "../z00z_core" }
z00z_crypto = { path = "../z00z_crypto" }
z00z_storage = { path = "../z00z_storage" }
z00z_utils = { path = "../z00z_utils" }                                      # MANDATORY: Always use z00z_utils abstractions
z00z_networks_rpc = { path = "../z00z_networks/rpc", features = ["logger"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
bincode = { version = "2.0.1", features = ["serde"], optional = true }

# Error Handling
thiserror = "2.0"

# Cryptography
rand = "0.8"
blake2 = "0.10"
digest = "0.10"
merlin = "3"
subtle = "2.6"

# Encryption (Priority 2.1 - Phase 2)
argon2 = "0.5"                                              # Argon2id key derivation
hkdf = "0.12"                                               # HKDF-SHA256 key expansion
chacha20poly1305 = { version = "0.10", features = ["std"] }
bip39 = { version = "2.2.2", features = ["all-languages"] }
bip32 = { version = "0.5", features = ["secp256k1"] }
k256 = "0.13"
sha2 = "0.10"
unicode-normalization = "0.1"
getrandom = { version = "0.2" }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
regex = "1.11"
hex = "0.4"
bech32 = "0.9"
base64 = "0.22"
qrcode = { version = "0.14", optional = true }
rayon = "1.11"
walkdir = "2"
tracing = "0.1"
uuid = { version = "1.6", features = ["v4", "serde", "js"] }
dirs = "5"
clap = { version = "4.5", features = ["derive"], optional = true }
lru = "0.16.3"                                                     # Phase 7: LRU cache eviction
unicode-security = "0.1"                                           # Phase 7: Unicode security profile checks for homoglyph defense

# State machine dependencies
evalexpr = "11.3"
glob = "0.3"

# Async trait support
async-trait = "0.1"
zeroize = { version = "1.7", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
z00z_core = { path = "../z00z_core", features = ["deterministic-rng"] }
z00z_crypto = { path = "../z00z_crypto", features = ["test-utils"] }
z00z_utils = { path = "../z00z_utils", features = ["test-utils"] }

# Native-only dev dependencies (don't work in WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.5"
proptest = "1.5"
syn = { version = "2", features = ["parsing", "full"] }
tempfile = "3.8"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = [
  "std",
  "serde_json_support",
  "bincode_support",
  "export_json",
  "export_binary",
  "clap",
  "ownership_policy_keyring",
]
std = []
serde_json_support = ["serde_json"]
bincode_support = ["bincode"]
export_json = ["serde_json_support"]
export_binary = ["bincode_support"]
ownership_policy_keyring = []
ownership_policy_challenge = []
ownership_policy_dual_ok = []
wasm = [] # Enable WASM-specific features (Web Worker, browser APIs)
os_hardening = [] # Best-effort native OS hardening (core dumps + mlock)
claim-auth-sign = []
test-params-fast = [
  "z00z_crypto/test-params-fast",
  "z00z_utils/test-params-fast",
  "claim-auth-sign",
] # Use faster crypto parameters for tests
qr-codes = ["dep:qrcode"]
eviction-logs = [
] # Enable eviction path/key logging (DEBUG ONLY; NEVER enable in production)
verbose-logging = [
] # Enable path logging for debugging (NEVER use in production - leaks metadata)
wallet_debug_tools = [
  "serde_json_support",
] # Debug-only: exports decrypted `.wlt` contents (NEVER enable in production)

# ============================================================================
# Native-Specific Dependencies (NOT for WASM)
# ============================================================================
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Full tokio with I/O for native platforms
tokio = { version = "1", features = ["full"] }

# RedB wallet storage (RedB-SPEC.v4 .wlt)
redb = "3.1.0"

# Safe advisory file locking for `.wlt` files
fs2 = "0.4"

# Native-only file system operations
zip = "7.0.0"

# JSON Schema validation (requires file system access)
jsonschema = "0.38.1"

# RPC Communication Layer (native)
# Why jsonrpsee: Industry-standard JSON-RPC 2.0 library (used by Substrate/Polkadot)
# - Type-safe method registration via proc macros
# - Built-in WebSocket support for WASM
# - Saves ~500 lines of boilerplate vs custom implementation
# - Reference: json-rpc-decision.md
jsonrpsee = { version = "0.26", features = [
  "server", # RPC server for LocalRpc
  "client", # RPC client for testing
  "macros", # Proc macros for #[rpc]
] }

# Windows-specific dependencies for file permissions
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
  "winnt",
  "accctrl",
  "aclapi",
  "securitybaseapi",
  "processthreadsapi",
] }

# ============================================================================
# WASM-Specific Dependencies
# ============================================================================
# These dependencies are only included when targeting WebAssembly.
# They enable JSON-RPC communication over WebSocket in the browser environment.

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Minimal tokio for WASM (no I/O, no mio, no net)
# WASM doesn't support mio-based I/O, so we only enable sync primitives
tokio = { version = "1", default-features = false, features = [
  "sync",
  "macros",
  "rt",
] }

# JSON-RPC over WebSocket for browser communication
# v0.26+ has improved WASM support with wasm-client feature
jsonrpsee = { version = "0.26", default-features = false, features = [
  "wasm-client",
] }

# Web Worker communication for non-blocking operations
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "MessageEvent",
  "MessageChannel",
  "MessagePort",
  "Worker",
  "Window",
  "WebSocket",
] }
js-sys = "0.3"

# Browser storage (IndexedDB) for persistent wallet data
rexie = "0.5" # Async IndexedDB wrapper

# Error handling and logging for WASM
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"

# WASM-specific dev dependencies for browser testing
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false # We'll run wasm-opt manually with correct flags
